--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mercadopago": "^1.5.14",
+    "nodemailer": "^6.9.1",
     "prisma": "^4.8.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
