--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.8.1",
     "@types/mercadopago": "^1.5.8",
+    "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mercadopago": "^1.5.14",
